--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "drupal/core-composer-scaffold": "^10",
         "drupal/core-project-message": "^10",
         "drupal/core-recommended": "^10",
+        "drupal/exif_orientation": "^1.4",
         "drupal/s3fs": "^3.4",
         "drupal/taxonomy_menu": "^3.6",
         "jolux/verdesoft_base": "dev-main",
