--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -35,6 +35,7 @@ module:
   emulsify_tools: 0
   entity: 0
   entity_reference_revisions: 0
+  exif_orientation: 0
   facets: 0
   field: 0
   field_group: 0
