--- a/config/sync/core.entity_view_display.commerce_product.default.default.yml
+++ b/config/sync/core.entity_view_display.commerce_product.default.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.commerce_product.default.verdesoft_36
     - field.field.commerce_product.default.verdesoft_45
     - field.field.commerce_product.default.verdesoft_46
+    - field.field.commerce_product.default.verdesoft_49
     - image.style.large
   module:
     - field_group
@@ -25,11 +26,12 @@ third_party_settings:
     group_properties:
       children:
         - verdesoft_29
+        - verdesoft_32
+        - verdesoft_49
         - verdesoft_46
         - verdesoft_45
         - verdesoft_27
         - verdesoft_36
-        - verdesoft_32
       label: Propriétés
       parent_name: ''
       region: content
@@ -103,7 +105,7 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 3
+    weight: 5
     region: content
   verdesoft_29:
     type: entity_reference_label
@@ -119,7 +121,7 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 5
+    weight: 1
     region: content
   verdesoft_36:
     type: entity_reference_label
@@ -127,7 +129,7 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 4
+    weight: 6
     region: content
   verdesoft_45:
     type: entity_reference_label
@@ -135,7 +137,7 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 2
+    weight: 4
     region: content
   verdesoft_46:
     type: entity_reference_label
@@ -143,7 +145,15 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 1
+    weight: 3
+    region: content
+  verdesoft_49:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: false
+    third_party_settings: {  }
+    weight: 2
     region: content
 hidden:
   created: true
