--- a/config/sync/core.entity_view_display.media.image.hero.yml
+++ b/config/sync/core.entity_view_display.media.image.hero.yml
@@ -5,24 +5,27 @@ dependencies:
   config:
     - core.entity_view_mode.media.hero
     - field.field.media.image.field_media_image
-    - image.style.hero
     - media.type.image
+    - responsive_image.styles.hero
   module:
-    - image
+    - media_parent_entity_link
+    - responsive_image
 id: media.image.hero
 targetEntityType: media
 bundle: image
 mode: hero
 content:
   field_media_image:
-    type: image
+    type: responsive_image
     label: visually_hidden
     settings:
+      responsive_image_style: hero
       image_link: ''
-      image_style: hero
       image_loading:
         attribute: lazy
-    third_party_settings: {  }
+    third_party_settings:
+      media_parent_entity_link:
+        link_to_parent: '0'
     weight: 0
     region: content
 hidden:
