--- a/config/sync/facets.facet.verdesoft_32_all.yml
+++ b/config/sync/facets.facet.verdesoft_32_all.yml
@@ -9,11 +9,11 @@ dependencies:
     - search_api
 id: verdesoft_32_all
 name: Floraison
-weight: 0
+weight: -1
 min_count: 1
 missing: false
 missing_label: others
-url_alias: verdesoft_32
+url_alias: v32
 facet_source_id: 'search_api:views_page__products_products__page_2'
 field_identifier: verdesoft_32
 query_operator: or
@@ -43,18 +43,6 @@ only_visible_when_facet_source_is_visible: false
 show_only_one_result: false
 show_title: false
 processor_configs:
-  active_widget_order:
-    processor_id: active_widget_order
-    weights:
-      sort: 20
-    settings:
-      sort: DESC
-  count_widget_order:
-    processor_id: count_widget_order
-    weights:
-      sort: 30
-    settings:
-      sort: DESC
   display_value_widget_order:
     processor_id: display_value_widget_order
     weights:
@@ -65,11 +53,6 @@ processor_configs:
     processor_id: hierarchy_processor
     weights:
       build: 100
-    settings: {  }
-  list_item:
-    processor_id: list_item
-    weights:
-      build: 5
     settings: {  }
   translate_entity:
     processor_id: translate_entity
