--- a/config/sync/facets.facet.verdesoft_49.yml
+++ b/config/sync/facets.facet.verdesoft_49.yml
@@ -1,4 +1,4 @@
-uuid: c3e7e920-c60f-4700-ad0d-bf08c19e1c70
+uuid: a15a0c4c-27f5-4f94-85d6-963203cdbea1
 langcode: fr
 status: true
 dependencies:
@@ -7,17 +7,15 @@ dependencies:
     - views.view.products_products
   module:
     - search_api
-_core:
-  default_config_hash: mzE2tKkF0ngDuJqrWWBd7xiTFRLCnWRItybcNiVS_ZQ
-id: category
-name: Categorie
-weight: -2
+id: verdesoft_49
+name: Indigène
+weight: -3
 min_count: 1
 missing: false
 missing_label: others
-url_alias: category
-facet_source_id: 'search_api:views_page__products_products__page_2'
-field_identifier: field_category
+url_alias: v49
+facet_source_id: 'search_api:views_page__products_products__page_1'
+field_identifier: verdesoft_49
 query_operator: or
 hard_limit: 0
 exclude: false
@@ -34,7 +32,7 @@ widget:
     show_numbers: true
     soft_limit: 0
     show_reset_link: false
-    reset_text: 'Alles weergeven'
+    reset_text: 'Tout afficher'
     hide_reset_when_no_selection: false
     soft_limit_settings:
       show_less_label: 'Show less'
@@ -45,12 +43,17 @@ only_visible_when_facet_source_is_visible: false
 show_only_one_result: false
 show_title: false
 processor_configs:
-  term_weight_widget_order:
-    processor_id: term_weight_widget_order
+  display_value_widget_order:
+    processor_id: display_value_widget_order
     weights:
-      sort: 60
+      sort: 40
     settings:
       sort: ASC
+  hierarchy_processor:
+    processor_id: hierarchy_processor
+    weights:
+      build: 100
+    settings: {  }
   translate_entity:
     processor_id: translate_entity
     weights:
