--- a/config/sync/block.block.verdesoft_32.yml
+++ b/config/sync/block.block.verdesoft_32.yml
@@ -1,29 +1,29 @@
-uuid: 2390bf78-37c4-41de-95fe-f0574183afcd
+uuid: d407994a-1cce-4d53-9e47-2cd8d12d4be9
 langcode: fr
 status: true
 dependencies:
   config:
-    - facets.facet.verdesoft_49
+    - facets.facet.verdesoft_32
   module:
     - facets
     - system
   theme:
     - aqua
-id: verdesoft_49_all
+id: verdesoft_32
 theme: aqua
 region: sidebar
-weight: -11
+weight: -9
 provider: null
-plugin: 'facet_block:verdesoft_49'
+plugin: 'facet_block:verdesoft_32'
 settings:
-  id: 'facet_block:verdesoft_49'
-  label: Indigène
+  id: 'facet_block:verdesoft_32'
+  label: Floraison
   label_display: visible
   provider: facets
   context_mapping: {  }
-  block_id: verdesoft_49_all
+  block_id: verdesoft_32
 visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /products/all
+    pages: '/taxonomy/term/*'
