--- a/config/sync/block.block.verdesoft_36.yml
+++ b/config/sync/block.block.verdesoft_36.yml
@@ -1,29 +1,29 @@
-uuid: 2390bf78-37c4-41de-95fe-f0574183afcd
+uuid: a2f048c2-2a8b-4674-b856-78cf9e82ec77
 langcode: fr
 status: true
 dependencies:
   config:
-    - facets.facet.verdesoft_49
+    - facets.facet.verdesoft_36
   module:
     - facets
     - system
   theme:
     - aqua
-id: verdesoft_49_all
+id: verdesoft_36
 theme: aqua
 region: sidebar
-weight: -11
+weight: -7
 provider: null
-plugin: 'facet_block:verdesoft_49'
+plugin: 'facet_block:verdesoft_36'
 settings:
-  id: 'facet_block:verdesoft_49'
-  label: Indigène
+  id: 'facet_block:verdesoft_36'
+  label: Profondeur
   label_display: visible
   provider: facets
   context_mapping: {  }
-  block_id: verdesoft_49_all
+  block_id: verdesoft_36
 visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /products/all
+    pages: '/taxonomy/term/*'
