--- a/config/sync/core.base_field_override.block_content.basic.changed.yml
+++ b/config/sync/core.base_field_override.block_content.basic.changed.yml
@@ -11,7 +11,7 @@ bundle: basic
 label: Modifié
 description: "L'heure à laquelle le bloc de contenu a été modifié pour la dernière fois."
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
