--- a/config/sync/core.base_field_override.block_content.basic.info.yml
+++ b/config/sync/core.base_field_override.block_content.basic.info.yml
@@ -11,7 +11,7 @@ bundle: basic
 label: Blokbeschrijving
 description: 'Une brève description de votre bloc.'
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
