--- a/config/sync/field.field.user.user.user_picture.yml
+++ b/config/sync/field.field.user.user.user_picture.yml
@@ -13,8 +13,8 @@ id: user.user.user_picture
 field_name: user_picture
 entity_type: user
 bundle: user
-label: Image
-description: 'Votre visage ou image virtuelle.'
+label: Afbeelding
+description: 'Uw foto of afbeelding.'
 required: false
 translatable: false
 default_value: {  }
