--- a/config/sync/language.content_settings.taxonomy_term.verdesoft_39.yml
+++ b/config/sync/language.content_settings.taxonomy_term.verdesoft_39.yml
@@ -9,6 +9,8 @@ dependencies:
 third_party_settings:
   content_translation:
     enabled: true
+    bundle_settings:
+      untranslatable_fields_hide: '0'
 id: taxonomy_term.verdesoft_39
 target_entity_type_id: taxonomy_term
 target_bundle: verdesoft_39
